# interview-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: online_retails_flow.yml
online_retails/: .env  Dockerfile  flow.py
online_retails/ddl/: init.sql
online_retails/tasks/mart/: build_dim_table.py  build_fact_table.py
online_retails/tasks/metrics/: marker.py  notification.py
online_retails/tasks/quality/: marker.py
online_retails/tasks/raw/: extract_online_retails.py
online_retails/tasks/vault/: load_hubs.py  load_links.py  load_sats.py
utilx/: clickhouse_client.py  hashx.py  push_to_prometheus.py
