[project]
name = "interview"
version = "0.1.0"
description = "Pipeline demo"
authors = [
    {name = "ZhengWei-Liu"}
]
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "prefect (>=3.4.19,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandera (>=0.26.1,<0.27.0)",
    "clickhouse-connect (>=0.9.2,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
